<resources>
    <string name="Continue">Continue</string>
    <string name="Exit">Exit</string>
    <string name="High">High</string>
    <string name="Middle">Middle</string>
    <string name="NoFaceDetected">Face detection failed, please makeup in manual mode</string>
    <string name="Normal">Normal</string>
    <string name="Original">Original</string>
    <string name="Save">Save</string>
    <string name="Store">Store</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_sticker_tips_1">Add your favorite or your own stickers</string>
    <string name="add_sticker_tips_2">Long press to favorite or delete it</string>
    <string name="add_successfully">Successfully added favorite</string>
    <string name="add_to_text">Added to</string>
    <string name="adjust">Adjust</string>
    <string name="aero_glass">Aero Glass</string>
    <string name="albums">Albums</string>
    <string name="all_pictures">All Pictures</string>
    <string name="all_videos">All Videos</string>
    <string name="allow">Allow</string>
    <string name="already_add">Already added</string>
    <string name="already_select">Already selected</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer_no">No</string>
    <string name="answer_yes">Yes</string>
    <string name="app_name">CameraS</string>
    <string name="apply">apply</string>
    <string name="area">Area</string>
    <string name="auto">Auto</string>
    <string name="auto_newline">AutoNewline</string>
    <string name="background">Background</string>
    <string name="base_magnifier">Magnifier</string>
    <string name="base_next">Next</string>
    <string name="beauty">Skin Tone</string>
    <string name="beauty_abs">Abs</string>
    <string name="beauty_arm">Arm</string>
    <string name="beauty_blush">Blush</string>
    <string name="beauty_contacts">Contacts</string>
    <string name="beauty_enlarge">Enlarge</string>
    <string name="beauty_eye_brow">Eyebrow</string>
    <string name="beauty_eye_lash">Eyelash</string>
    <string name="beauty_eye_shadow">Eyeshadow</string>
    <string name="beauty_face_lift">Slim Face</string>
    <string name="beauty_filter">Filter</string>
    <string name="beauty_pecs">Pecs</string>
    <string name="beauty_skin">Smooth</string>
    <string name="beauty_to_bodyshape">Slim</string>
    <string name="beauty_tone">Tone</string>
    <string name="bg_color">Color</string>
    <string name="bg_dream">Dream</string>
    <string name="bg_gallery">Gallery</string>
    <string name="bg_graphic">Graphic</string>
    <string name="bg_light">Light</string>
    <string name="bg_texture">Texture</string>
    <string name="big_eyes">Enlarger</string>
    <string name="blur">Blur</string>
    <string name="blur_with_mask">Blur with mask</string>
    <string name="blur_with_paint">Blur with paint</string>
    <string name="border">Border</string>
    <string name="border_background_color">Color</string>
    <string name="border_size">Border</string>
    <string name="bright_color">Brighten</string>
    <string name="bright_eyes">Bright Eyes</string>
    <string name="brightness">Brightness</string>
    <string name="btn_eraser">Erase</string>
    <string name="btn_paint">Paint</string>
    <string name="btn_share">Share</string>
    <string name="camera_auto">Auto</string>
    <string name="camera_permission_denied_forever_message">Go to Settings>Apps>CameraS>Permissions to allow camera permission and storage permission</string>
    <string name="camera_permission_rationale_message">Need camera permission to take pictures and record video!</string>
    <string name="camera_selfie">Selfie</string>
    <string name="camera_set_para_error">camera set parameters error</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="can_not_use_hdr">Can not use HDR</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cant_access_folder">"Can't access this folder"</string>
    <string name="cant_write_folder">"Can't write to this folder"</string>
    <string name="cant_write_folder_above_19">"Can't Write to SD card folder on Android 4.4+ device"</string>
    <string name="chaye_loading_sponsored">Loading sponsored content</string>
    <string name="choose_image">choose a image for edit</string>
    <string name="circular_bead_size">Corner</string>
    <string name="clean">Clean</string>
    <string name="click_to_erase">2. Click to erase</string>
    <string name="click_to_input_text">Input text</string>
    <string name="clipboard">Clipboard</string>
    <string name="collage_album">Album</string>
    <string name="collage_camera">Camera</string>
    <string name="collage_mirror">Mirror</string>
    <string name="collage_reversal">Reversal</string>
    <string name="collage_rotate">Rotate</string>
    <string name="collage_save">Save</string>
    <string name="com.crashlytics.android.build_id">00000000-0000-0000-0000-000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="hair_color">Hair Color</string>
    <string name="lipstick">Lipstick</string>
    <string name="preference_about">About</string>
    <string name="preference_common">Common</string>
    <string name="preference_default_camera">Default camera</string>
    <string name="preference_default_camera_default">default_rear_camera</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_feedback">Feedback</string>
    <string name="preference_floating_camera_button">Floating camera button</string>
    <string name="preference_front_camera">Front Camera</string>
    <string name="preference_front_camera_mirror">Save pictures as previewed</string>
    <string name="preference_front_camera_mirror_summary">Save all pictures you take as shown in the preview, not as flipped images.</string>
    <string name="preference_grid">Grid lines</string>
    <string name="preference_grid_default">preference_grid_none</string>
    <string name="preference_long_press_control">Long press control</string>
    <string name="preference_long_press_default">long_press_record_video</string>
    <string name="preference_manage_sticker_res">Manage sticker resources</string>
    <string name="preference_photo_focus_shoot">Focus &amp; shoot</string>
    <string name="preference_photo_focus_shoot_summary">Tap to focus, then tap again to take a photo.</string>
    <string name="preference_photo_watermark">CameraS watermark</string>
    <string name="preference_photo_watermark_summary">To add watermark when take photo.</string>
    <string name="preference_photo_zoom">Zoom lens</string>
    <string name="preference_photo_zoom_summary">Tap the icon to adjust the focal length</string>
    <string name="preference_privacy_policy">To be developed</string>
    <string name="preference_rate">Rate us 5 stars</string>
    <string name="preference_rear_camera">Rear Camera</string>
    <string name="preference_remove_picture">Review pictures</string>
    <string name="preference_remove_picture_summary">View pictures immediately after you take them.</string>
    <string name="preference_reset">Reset settings</string>
    <string name="preference_reset_summary">Reset all CameraS settings to default</string>
    <string name="preference_resolution">Picture size</string>
    <string name="preference_save_location">Storage location</string>
    <string name="preference_save_location_summary">Folder to storage the photo/video files in</string>
    <string name="preference_share">Share</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Take photos with sound</string>
    <string name="preference_sleep_mode">Sleep mode</string>
    <string name="preference_sleep_mode_summary">The camera will hibernate after inacting for over 90 seconds.</string>
    <string name="preference_stamp_dateformat">Datestamp format</string>
    <string name="preference_stamp_dateformat_default_value">preference_stamp_dateformat_none</string>
    <string name="preference_stamp_timeformat">Timestamp format</string>
    <string name="preference_stamp_timeformat_default_value">preference_stamp_timeformat_none</string>
    <string name="preference_straighten">Straighten</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_default">0</string>
    <string name="preference_version">Version</string>
    <string name="preference_video_resolution">Video size</string>
    <string name="preference_volume">Volume key control</string>
    <string name="preference_volume_default">volume_take_pictures</string>
    <string name="rate_no">Later</string>
    <string name="rate_style_one_go">GO</string>
    <string name="rate_style_one_text">Please rate us 5 stars</string>
    <string name="retouch">Retouch</string>
    <string name="skin_color">Skin Tone</string>
    <string name="slim_face">Face-lift</string>
    <string name="smoother">Smoother</string>
    <string name="teeth_white">Teeth</string>
</resources>