<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="preference_screen"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/preference_default_camera_entries" android:title="@string/preference_default_camera" android:key="preference_default_camera" android:defaultValue="@string/preference_default_camera_default" android:entryValues="@array/preference_default_camera_values" />
    <PreferenceCategory android:title="@string/preference_rear_camera" android:key="preference_rear_camera">
        <ListPreference android:title="@string/preference_resolution" android:key="rear_camera_resolution" />
        <ListPreference android:title="@string/preference_video_resolution" android:key="rear_camera_video_size" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_front_camera" android:key="preference_front_camera">
        <ListPreference android:title="@string/preference_resolution" android:key="front_camera_resolution" />
        <ListPreference android:title="@string/preference_video_resolution" android:key="front_camera_video_size" />
        <SwitchPreference android:title="@string/preference_front_camera_mirror" android:key="preference_f_camera_mirror" android:summary="@string/preference_front_camera_mirror_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_common" android:key="preference_common">
        <SwitchPreference android:title="@string/preference_photo_watermark" android:key="preference_photo_watermark" android:summary="@string/preference_photo_watermark_summary" android:defaultValue="false" />
        <SwitchPreference android:title="@string/preference_photo_zoom" android:key="preference_photo_zoom_lens" android:summary="@string/preference_photo_zoom_summary" android:defaultValue="true" />
        <SwitchPreference android:title="@string/preference_remove_picture" android:key="preference_review_pictures" android:summary="@string/preference_remove_picture_summary" android:defaultValue="false" />
        <SwitchPreference android:title="@string/preference_face_detection" android:key="preference_face_detection" android:defaultValue="false" />
        <SwitchPreference android:title="@string/preference_straighten" android:key="preference_straighten" android:defaultValue="false" />
        <SwitchPreference android:title="@string/preference_photo_focus_shoot" android:key="preference_photo_focus_shoot" android:summary="@string/preference_photo_focus_shoot_summary" android:defaultValue="false" />
        <ListPreference android:entries="@array/preference_long_press_entries" android:title="@string/preference_long_press_control" android:key="preference_long_press" android:defaultValue="@string/preference_long_press_default" android:entryValues="@array/preference_long_press_values" />
        <ListPreference android:entries="@array/preference_volume_entries" android:title="@string/preference_volume" android:key="preference_volume" android:defaultValue="@string/preference_volume_default" android:entryValues="@array/preference_volume_values" />
        <ListPreference android:entries="@array/preference_timer_entries" android:title="@string/preference_timer" android:key="preference_timer" android:summary="@string/preference_timer_default" android:defaultValue="@string/preference_timer_default" android:entryValues="@array/preference_timer_values" />
        <ListPreference android:entries="@array/preference_grid_entries" android:title="@string/preference_grid" android:key="preference_grid" android:defaultValue="@string/preference_grid_default" android:entryValues="@array/preference_grid_values" />
        <SwitchPreference android:title="@string/preference_shutter_sound" android:key="preference_shutter_sound" android:summary="@string/preference_shutter_sound_summary" android:defaultValue="false" />
        <SwitchPreference android:title="@string/preference_floating_camera_button" android:key="preference_floating_camera_button" android:defaultValue="false" />
        <SwitchPreference android:title="@string/preference_sleep_mode" android:key="preference_sleep_mode" android:summary="@string/preference_sleep_mode_summary" android:defaultValue="false" />
        <ListPreference android:entries="@array/preference_stamp_timeformat_entries" android:title="@string/preference_stamp_timeformat" android:key="preference_stamp_timeformat" android:defaultValue="@string/preference_stamp_timeformat_default_value" android:entryValues="@array/preference_stamp_timeformat_values" />
        <ListPreference android:entries="@array/preference_stamp_dateformat_entries" android:title="@string/preference_stamp_dateformat" android:key="preference_stamp_dateformat" android:defaultValue="@string/preference_stamp_dateformat_default_value" android:entryValues="@array/preference_stamp_dateformat_values" />
        <Preference android:title="@string/preference_save_location" android:key="preference_save_location" android:summary="@string/preference_save_location_summary" />
        <Preference android:title="@string/preference_manage_sticker_res" android:key="preference_manage_sticker_res" />
        <Preference android:title="@string/preference_reset" android:key="preference_reset" android:summary="@string/preference_reset_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_about" android:key="preference_about">
        <Preference android:title="@string/preference_feedback" android:key="preference_feedback" />
        <Preference android:title="@string/preference_version" android:key="preference_version" />
        <Preference android:title="@string/preference_rate" android:key="preference_rate" />
        <Preference android:title="@string/preference_share" android:key="preference_share" />
        <Preference android:title="@string/preference_privacy_policy" android:key="preference_privacy_policy" />
    </PreferenceCategory>
</PreferenceScreen>