<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center|top" android:background="@drawable/dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_gravity="center|top" android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center|right|top" android:id="@id/close" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="30.0dip" android:src="@drawable/ic_rate_close_style_one" android:layout_marginEnd="4.0dip" />
        <ImageView android:layout_gravity="center|top" android:layout_width="350.0dip" android:layout_height="350.0dip" android:src="@drawable/ic_rate_logo_style_two" />
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/content_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip">
            <TextView android:textSize="20.0dip" android:textColor="#ff333333" android:layout_gravity="center" android:id="@id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_style_one_text" />
        </LinearLayout>
        <Button android:textSize="24.0dip" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/rate" android:background="@drawable/ic_rate_bg_style_one" android:layout_width="220.0dip" android:layout_height="43.0dip" android:layout_marginTop="120.0dip" android:text="@string/rate_style_one_go" android:textAllCaps="false" />
        <TextView android:textSize="13.0dip" android:textColor="#ff666666" android:layout_gravity="center" android:id="@id/later" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:text="@string/rate_no" android:textAllCaps="false" />
    </FrameLayout>
</FrameLayout>